--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -47,6 +47,7 @@
 					{{msg.message}}
 					<span class="item-note" ng-class="device.color">
 					{{ msg.device }}
+					{{ msg }}
 					</span>
 				</div>
 			</div>
