--- a/src/templates/people.html
+++ b/src/templates/people.html
@@ -25,12 +25,13 @@
 					<ion-option-button class="button-positive" ng-click="deviceTap('router.viewPerson',p)">
 				      View
 				    </ion-option-button>
-				    <ion-option-button class="button-info" ng-click="testSession(session)">
-				      Test
-				    </ion-option-button>
+   					<ion-option-button class="button-info" ng-click="testSession(session)">
+					      Test
+					</ion-option-button>				    
+				    <!-- 
 				    <ion-option-button class="button-balanced" ng-click="testTransaction(session)">
 				      Test Transaction
-				    </ion-option-button>
+				    </ion-option-button> -->
 				    <!-- 
 				    <ion-option-button class="button-info" ng-click="deviceTap('router.editLocation',p)">
 				      Edit
