--- a/src/templates/device-single.html
+++ b/src/templates/device-single.html
@@ -72,6 +72,13 @@
 							    </ion-option-button>
 						    </div>
 					    </div>
+					    
+				    	<!-- <div ng-if="session.deviceType!='barista'"> -->
+					    <ion-option-button class="button-info" ng-click="testWelcome(session)">
+							Test Welcome
+					    </ion-option-button>
+					    <!-- </div> -->
+					    
 					    <ion-option-button class="button-dark" ng-click="snapshot(session)">
 					    	<i class="icon ion-ios-camera-outline"></i>
 					    	<!-- Snapshot -->
