--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -97,6 +97,7 @@
     <script src="js/controllers/addPerson.js"></script>
     <script src="js/controllers/viewPerson.js"></script>
     <script src="js/controllers/addMessage.js"></script>
+    <script src="js/controllers/messages.js"></script>
     
     <!-- Services -->
     <script src="js/services/shareComponentService.js"></script>
