--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -56,6 +56,11 @@
 					People
 					<span class="badge badge-balanced">{{totalPeople}}</span>
 				</a>
+				<a menu-close class="item item-icon-left" href="#/route/add-message">
+					<i class="icon ion-ios-email"></i>
+					Messages
+					<span class="badge badge-balanced">{{totalMessages}}</span>
+				</a>
 				<div class="item item-divider">
 					Quick Actions
 				</div>
