--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -56,7 +56,7 @@
 					People
 					<span class="badge badge-balanced">{{totalPeople}}</span>
 				</a>
-				<a menu-close class="item item-icon-left" href="#/route/add-message">
+				<a menu-close class="item item-icon-left" href="#/route/messages">
 					<i class="icon ion-ios-email"></i>
 					Messages
 					<span class="badge badge-balanced">{{totalMessages}}</span>
