--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="js/services/Sessions.js"></script>
     <script type="text/javascript" src="js/services/VisitorsService.js"></script>
     <script type="text/javascript" src="js/services/Visitors.js"></script>
+    <script type="text/javascript" src="js/services/Messages.js"></script>
     <script type="text/javascript" src="js/services/Api.js"></script>
     <script type="text/javascript" src="js/services/Toaster.js"></script>
     <script type="text/javascript" src="js/services/LSFactory.js"></script>
@@ -100,6 +101,8 @@
     <script src="js/controllers/viewPerson.js"></script>
     <script src="js/controllers/addMessage.js"></script>
     <script src="js/controllers/messages.js"></script>
+    <script src="js/controllers/editMessage.js"></script>
+    
     
     <!-- Services -->
     <script src="js/services/shareComponentService.js"></script>
