--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -54,12 +54,12 @@
 				<a menu-close class="item item-icon-left" href="#/route/people">
 					<i class="icon ion-ios-people-outline"></i>
 					People
-					<span class="badge badge-balanced">{{totalPeople}}</span>
+					<span ng-show="totalPeople>0" class="badge badge-balanced">{{totalPeople}}</span>
 				</a>
 				<a menu-close class="item item-icon-left" href="#/route/messages">
 					<i class="icon ion-ios-email"></i>
 					Messages
-					<span class="badge badge-balanced">{{totalMessages}}</span>
+					<span ng-show="totalMessages>0" class="badge badge-balanced">{{totalMessages}}</span>
 				</a>
 				<div class="item item-divider">
 					Quick Actions
