--- a/src/templates/edit-message.html
+++ b/src/templates/edit-message.html
@@ -1,4 +1,4 @@
-<ion-view title="Add New Message">
+<ion-view title="Edit Message">
 	<ion-content>
 		
 		<form name="addMessageForm" ng-init="setFormScope(this)">
@@ -8,15 +8,15 @@
 				</div>
 				<label class="item item-input item-stacked-label">
 					<!-- <span class="input-label">Text</span> -->
-					<input type="text" placeholder="Text" ng-model="newmessage.text" maxlength="140">
+					<input type="text" placeholder="Text" ng-model="newmessage.text" maxlength="80">
 				</label>
 				
 				<div class="item item-divider">
-					Expositor
+					Presenter
 				</div>
 				<label class="item item-input item-stacked-label">
 					<!-- <span class="input-label">Expositor</span> -->
-					<input type="text" placeholder="Expositor" ng-model="newmessage.expositor">
+					<input type="text" placeholder="Presenter" ng-model="newmessage.expositor">
 				</label>
 				
 				<div class="item item-divider">
