--- a/src/templates/add-message.html
+++ b/src/templates/add-message.html
@@ -15,15 +15,15 @@
 				</div>
 				<label class="item item-input item-stacked-label">
 					<!-- <span class="input-label">Text</span> -->
-					<input type="text" placeholder="Text" ng-model="newmessage.text" maxlength="140">
+					<input type="text" placeholder="Text" ng-model="newmessage.text" maxlength="80">
 				</label>
 				
 				<div class="item item-divider">
-					Expositor
+					Presenter
 				</div>
 				<label class="item item-input item-stacked-label">
 					<!-- <span class="input-label">Expositor</span> -->
-					<input type="text" placeholder="Expositor" ng-model="newmessage.expositor">
+					<input type="text" placeholder="Presenter" ng-model="newmessage.expositor">
 				</label>
 				
 				<div class="item item-divider">
