--- a/src/templates/edit-user.html
+++ b/src/templates/edit-user.html
@@ -20,16 +20,25 @@
 				</label>
 				
 				
-				<label class="item item-input item-stacked-label">
+				<!-- <label class="item item-input item-stacked-label">
 					<span class="input-label">Image</span>
 					<input type="text" placeholder="Image" ng-model="newuser.image">
+				</label> -->
+				
+				<label class="item item-input item-select">
+					<span class="input-label">Image</span>
+					<!-- <input type="text" placeholder="Icon" ng-model="newdevice.icon"> -->
+					<img ng-src="{{newuser.image}}" style="width:40px;height:40px">
+					<select ng-model="newuser.image" ng-options="o.src as o.name for o in imageList">
+						<option value="" >Select</option>
+					</select>
 				</label>
 				
 				<div>
 					<li class="item item-toggle">
 						Featured
 						<label class="toggle toggle-balanced">
-							<input type="checkbox" checked ng-model="newuser.featured">
+							<input type="checkbox" checked ng-model="newuser.showlocation">
 							<div class="track">
 								<div class="handle"></div>
 							</div>
