--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <link href="libs/ionic/ionic.css" rel="stylesheet">
     <link href="libs/angular-carousel/angular-carousel.css" rel="stylesheet" type="text/css" />
+    <link href="libs/ionicons/ionicons.css" rel="stylesheet">
+    
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
     <link href="css/base.css" type="css/style" rel="stylesheet"/>
