--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -104,6 +104,7 @@
     <script src="js/controllers/addMessage.js"></script>
     <script src="js/controllers/messages.js"></script>
     <script src="js/controllers/editMessage.js"></script>
+    <script src="js/controllers/menuleft.js"></script>
     
     
     <!-- Services -->
