--- a/src/templates/intro.html
+++ b/src/templates/intro.html
@@ -78,7 +78,7 @@
 		    <ion-content>
 		    	
 				<div class="list">
-					<a menu-close class="item item-icon-left" href="https://client.xivelylive.com/">
+					<a menu-close class="item item-icon-left" href="https://kiosk-mmayorivera.c9.io/">
 						<i class="icon ion-ios-monitor"></i>
 						Kiosk
 					</a>
